# media-platform-backend

./: .env.backoffice.sample  .env.catalog.sample  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml  pytest.ini
etc/docker/: compose.yaml
etc/docker/postgres/: compose.yaml  init.sql
etc/docker/rabbitmq/: compose.yaml
migrations/contexts/backoffice/: env.py
migrations/contexts/backoffice/versions/: bb0cccea3ff9_initial_alembic.py
migrations/contexts/catalog/: env.py
migrations/contexts/catalog/versions/: 4fc329c8b87a_initial_alembic.py
scripts/contexts/backoffice/: rabbitmq_setup.py
scripts/contexts/catalog/: rabbitmq_setup.py
src/apps/backoffice/api/v0/: exception.py  main.py
src/apps/catalog/api/v0/: exception.py  main.py
src/apps/shared/api/v0/: controller.py
src/contexts/backoffice/media/domain/: media.py  media_exceptions.py  media_repository.py
src/contexts/backoffice/movies/domain/: movie.py  movie_exceptions.py  movie_repository.py
src/contexts/backoffice/series/domain/: serie.py  serie_episode.py  serie_exceptions.py  serie_repository.py  serie_season.py
src/contexts/catalog/media/domain/: media.py  media_events.py  media_exceptions.py  media_repository.py
src/contexts/catalog/movies/domain/: movie.py  movie_events.py  movie_exceptions.py  movie_repository.py
src/contexts/catalog/series/domain/: serie.py  serie_episode.py  serie_events.py  serie_exceptions.py  serie_repository.py  serie_season.py
src/contexts/shared/domain/: file.py  image.py
src/contexts/shared/infrastructure/file_manager/: file_manager.py
src/contexts/shared/infrastructure/rabbitmq/: rabbitmq_config.py  rabbitmq_connection.py
tests/apps/: index.html
tests/contexts/backoffice/: conftest.py
tests/contexts/backoffice/media/: conftest.py
tests/contexts/backoffice/media/factory/: media_factory.py
tests/contexts/backoffice/movies/: conftest.py
tests/contexts/backoffice/series/: conftest.py
tests/contexts/catalog/: conftest.py
tests/contexts/catalog/media/factory/: media_factory.py
tests/contexts/catalog/movies/: conftest.py
tests/contexts/catalog/series/: conftest.py
tests/contexts/shared/factory/: image_factory.py
(+200 files in other folders)
